<resources>
    <string name="app_name">ZikirMatik</string>
    <string name="counter_info">100</string>
    <string name="save">Kaydet</string>
    <string name="zikirlerim">Zikirlerim</string>">
    <string name="search">Arama...</string>
    <string name="counter_name">SubhanAllah</string>
    <string name="counter">150</string>
    <string name="counter_date">01.11.2023</string>
    <string name="hadith">Hadis-Ayet ve Dua</string>
    <string name="name_of_allah">Esmaül Hüsna</string>
    <string name="home">Ana sayfa</string>
    <string name="et_counter_name">zikir adınız</string>
    <string name="zikir_kaydet">Zikir Kaydet</string>
    <string name="hadith_title">Kuran-ı Kerim</string>
    <string name="hadith_content">"Kim zerre kadar hayır işlerse, onu görecek ve kim zerre kadar kötülük işlerse, onu görecek."</string>
    <string name="turkish_name">Allah</string>
    <string name="arabic_name">الله</string>
    <string name="mean">"Eşi benzeri olmayan"</string>
    <string name="title">"Zikirimi Sil"</string>
    <string name="message">"Zikirini silmek istediğinden emin misin?"</string>
    <string name="delete">"Sil"</string>
    <string name="cancel">"Vazgeç"</string>
    <string name="reset">"Sıfırla"</string>
    <string name="reset_title">"Zikirimi Sıfırla"</string>
    <string name="reset_message">"Zikirini sıfırlamak istediğinden emin misin?"</string>
    <string name="play_store_title">Uygulamalarıma Puan Ver</string>
    <string name="play_store_message">Play store hesabıma giderek uygulamalarımı puanlamak ister misin?</string>
    <string name="play_store_cancel">Hayır</string>
    <string name="play_store_go">Evet</string>
    <string name="empty_count_info">Zikir listeniz boş!</string>
    <string name="search_info">Sonuç bulunamadı!</string>
    <string name="update_title">Zikirimi Güncelle</string>
    <string name="update_message">Zikirinizi güncellemek istediğinizden emin misiniz?</string>
    <string name="update">Güncelle</string>
    <string name="update_cancel">Hayır</string>
    <string name="dua">Dua</string>
    <string name="namaz">Namaz</string>
    <string name="namaz_title">Sabah Namazı</string>
    <string name="hadith2">Hadis-Ayet</string>
    <string name="dua_title">Fatiha Suresi</string>
    <string name="dua_description">dsaf dsf asfasfas fadsf asf asfas f asf asfas fasfas fasf asfasf asfa sfasfas f asfasfasf asfasf asfasf asfasfaf</string>

</resources>