<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:background="@color/screen_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bsd_tv_info"
        style="@style/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:backgroundTint="@color/recycler_item_background"
        android:gravity="center"
        android:text="@string/zikir_kaydet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_counter_name"
        style="@style/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_64dp"
        android:background="@drawable/item_background"
        android:backgroundTint="@color/recycler_item_background"
        android:hint="@string/et_counter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bsd_tv_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btd_save"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_64dp"
        android:background="@drawable/widgets_background"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_counter_name" />

</androidx.constraintlayout.widget.ConstraintLayout>