<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:background="@color/recycler_item_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rad_tv_title"
        style="@style/counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/reset_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/rad_iv_info"
        android:layout_width="@dimen/width_56dp"
        android:layout_height="@dimen/height_56dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:src="@drawable/info_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_tv_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rad_tv_message"
        style="@style/counter_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:gravity="center"
        android:text="@string/reset_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_iv_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rad_btn_cancel"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:background="@drawable/widgets_background"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/rad_btn_reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_tv_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rad_btn_reset"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:background="@drawable/widgets_background"
        android:text="@string/reset"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rad_btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/rad_tv_message" />

</androidx.constraintlayout.widget.ConstraintLayout>