<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".presentation.view.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12dp"
        android:background="@color/screen_background"
        android:src="@drawable/vibration_image"
        app:layout_constraintEnd_toStartOf="@+id/button_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12dp"
        android:background="@color/screen_background"
        android:src="@drawable/color_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_vibration"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_color">

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/circular"
            android:layout_width="@dimen/width_180dp"
            android:layout_height="@dimen/height_180dp"
            android:backgroundTint="@color/image_background"
            app:cardCornerRadius="@dimen/corner_radius_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tx_counter_info"
            style="@style/counter_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:background="@drawable/widgets_background"
            android:gravity="center"
            android:text="@string/counter_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/button_reset"
            android:layout_width="@dimen/width_28dp"
            android:layout_height="@dimen/height_28dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/text_view_background"
            app:cardCornerRadius="@dimen/corner_radius_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.circularreveal.cardview.CircularRevealCardView
            android:id="@+id/button_counter"
            android:layout_width="@dimen/width_56dp"
            android:layout_height="@dimen/height_56dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:backgroundTint="@color/text_view_background"
            app:cardCornerRadius="@dimen/corner_radius_100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/widgets_background"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_go_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_counter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_go_list"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/widgets_background"
        android:text="@string/zikirlerim"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_save"
        app:layout_constraintTop_toBottomOf="@+id/cl_counter" />

</androidx.constraintlayout.widget.ConstraintLayout>